# DSL-LLVM-rs

./: .travis.yml  Cargo.toml  README.md
src/: ast.rs  lib.rs  typescript.pest  utils.rs  vm.rs
src/compiler/: compiler.rs  mod.rs
src/parser/: derive.rs  mod.rs  result.rs
src/value/: any.rs  function.rs  mod.rs
tests/: literal_lexer.rs  literal_parser.rs  llvm.rs  llvm_basic.rs  parser_literal.rs
