[package]
name = "dsl-to-llvm-example"
version = "0.2.1"


[lib]
crate-type = ["dylib", "rlib"]
name =  "typescript"
path = "src/lib.rs"

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }
colored = "1.8.0"

[dev-dependencies]

[features]



[profile.release]
lto = true
opt-level = "s"